--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 - REDESIGN SOURCE ASSIGNER, ADD SOURCE SORTER
-    * Makes assigner simpler with negligible downside *
+    * Simplifies assigner with negligible downside *
     Instead of returning two tables, assigner will only return sorted keys, for values sorter subcomponent should be used.
     No map structure (hashmap) will be ever used.
     Keys list returned by assigner shall have same length as items list.
@@ -8,7 +8,7 @@
         - Unlike before, validation will be required to ensure no key name conflicts
 
 - MERGE DRAWER HIGHLIGHT SUBCOMPONENT INTO SOURCE FORMATTER
-    * Makes highlight system and drawer component simpler *
+    * Simplifies highlight system and drawer component *
     Remove highlight subcomponent and instead expand functionallity of source formatter.
     Although unsure, formatter could return list of text chunks paired with highlight group. Texts will be concatinated to create an item. Highlights will be used by drawer. System was inspired by API of neovim itself.
     Source context after formatter will contain structured and raw information about format.
@@ -18,7 +18,7 @@
 
 - REPLACE SOURCE FORMATTER WITH FORMAT ITERATOR
     * Improves UX *
-    Formatter function will be run for each item in the provided list. Structuring return value will be handled internally.
+    Formatter function will be run for each item in the provided list. Structuring returned value will be handled internally.
     Formatter Context will only contain information about current item.
 
 - FINISH HANDLING SYSTEM AND HANDLER COMPONENT
